<resources>
    <string name="app_name">Record Keeper</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="running_image_description">Running image</string>
    <string name="five_km_heading">5km</string>
    <string name="ten_km_heading">10km</string>
    <string name="half_marathon_heading">Half Marathon</string>
    <string name="marathon_heading">Marathon</string>
    <string name="longest_ride_heading">Longest Ride</string>
    <string name="best_average_speed">Best Average Speed</string>
    <string name="biggest_climb_header">Biggest Climb</string>
    <string name="cycling_image_description">cycling image description</string>
    <string name="rest_running_records">Rest Running Records</string>
    <string name="rest_cycling_records">Rest Cycling Records</string>
    <string name="reset_all_records">Reset All Records</string>
    <string name="record_hint">Record</string>
    <string name="hint_date">Date</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete Record</string>
</resources>