<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/record_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="12:23" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_record">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="12/12/2023" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/button_save"
        app:layout_constraintTop_toBottomOf="@id/text_input_date" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/button_delete"
        app:layout_constraintTop_toBottomOf="@id/button_save" />

</androidx.constraintlayout.widget.ConstraintLayout>