<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_heading"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cycling_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/bike_heading" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_overlay" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/cycling"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_heading">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_longest_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_longest_ride_header"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longest_ride_heading"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_longest_ride_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/RecordValueTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="25:09" />

                <TextView
                    android:id="@+id/text_view_longest_ride_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_longest_ride_value"
                    tools:text="10/10/2024" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_best_average_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_best_average_speed_header"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_average_speed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_best_average_speed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/RecordValueTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="25:09" />

                <TextView
                    android:id="@+id/text_view_best_average_speed_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_best_average_speed_value"
                    tools:text="10/10/2024" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_grey" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_biggest_climb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/text_view_biggest_climb_header"
                    style="@style/RecordNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biggest_climb_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_biggest_climb_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/RecordValueTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="25:09" />

                <TextView
                    android:id="@+id/text_view_biggest_climb_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/RecordDateTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_biggest_climb_value"
                    tools:text="10/10/2024" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>